# moDiNA

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-docs.yml
docs/source/: api.rst  citation.rst  conf.py  how_to_use_modina.rst  index.rst  installation.rst  modina.rst  modules.rst  nextflow.rst  python_package.rst  tutorial.rst
docs/source/_static/: custom.css
src/moDiNA/: context_simulation.py  diffnet.py  score_calculation.py  statistics_utils.py
src/moDiNA.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/modina/: __init__.py  context_net_inference.py  context_simulation.py  diff_net_construction.py  diffnet.py  edge_filtering.py  pipeline.py  ranking.py  score_calculation.py  statistics_utils.py
src/modina/eval/: eval_association_scores.R  eval_config.R  eval_differential_scores.R  eval_helpers.R  eval_ranking_similarity.R  eval_roc_recall_enrichment.R
