[tool.poetry]
name = "moDiNA"
version = "0.0.1"
description = "Multi-Omics Differential Network Analysis"
authors = ["Andrea Raithel <andrea.raithel@tum.de>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/DyHealthNet/moDiNA.git"
repository = "https://github.com/DyHealthNet/moDiNA.git"
documentation = "https://github.com/DyHealthNet/moDiNA/wiki"
keywords = ["multi-omics", "network", "analysis"]
packages = [
    { include = "modina", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = ">=1.26.4"
pandas = ">=2.2.3"
scipy = ">=1.11.0"
numba = ">=0.60.0"
matplotlib = ">=3.10.7"
networkx = ">=3.5"
igraph = ">=0.11.9"
napypi = "^1.0.1"

[tool.poetry.urls]
Homepage = "https://github.com/DyHealthNet/moDiNA.git"
Issues = "https://github.com/DyHealthNet/moDiNA/issues"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"