[project]
name = "moDiNA"
version = "0.0.1"
description = "Multi-Omics Differential Network Analysis"
authors = [{name = "Andrea Raithel", email = "andrea.raithel@tum.de"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.12"
keywords = ["multi-omics", "network", "analysis"]
packages = [{include = "modina", from = "src"}]
dependencies = [
    "numpy >=1.26.4",
    "pandas >=2.2.3",
    "scipy >=1.11.0",
    "networkx >=3.5",
    "igraph >=1.0.0",
    "napypi >=1.0.1"
]

[project.urls]
homepage = "https://github.com/DyHealthNet/moDiNA.git"
repository = "https://github.com/DyHealthNet/moDiNA.git"
documentation = "https://dyhealthnet.github.io/moDiNA"
issues = "https://github.com/DyHealthNet/moDiNA/issues"

[project.optional-dependencies]
dev = [
    "pytest >=7.4",
    "sphinx >=7.1"
]

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"